monitoring/prometheus/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-server
  template:
    metadata:
      labels:
        app: prometheus-server
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus
          args:
            - --storage.tsdb.path=/prometheus/prometheus_data/
            - --config.file=/etc/prometheus/prometheus.yml
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus
            - name: prometheus-persistent-storage-store
              mountPath: /prometheus/prometheus_data/
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-server-conf
            defaultMode: 420
        - name: prometheus-persistent-storage-store
          hostPath:
            path: /opt/prometheus/data
            type: DirectoryOrCreate
